# tap-spotify

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  meltano.yml  pyproject.toml  tap-spotify.sh  tox.ini
.github/: dependabot.yml
.github/workflows/: test.yml
tap_spotify/: __init__.py  __main__.py  auth.py  client.py  pagination.py  streams.py  tap.py
tap_spotify/schemas/: __init__.py  album.py  artist.py  audio_features.py  external.py  followers.py  image.py  restriction.py  track.py
tap_spotify/schemas/utils/: __init__.py  custom_object.py  indexed.py  rank.py  synced_at.py
tap_spotify/tests/: __init__.py  test_core.py
tests/: test_core.py
