[tool.poetry]
name = "tap-spotify"
version = "0.4.0"
description = "`tap-spotify` is a Singer tap for Spotify, built with the Meltano SDK for Singer Taps."
authors = ["Reuben Frankel"]
keywords = [
    "ELT",
    "Spotify",
]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.7.1"
requests = "^2.31.0"
singer-sdk = "^0.34.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
tox = "^3.24.4"
flake8 = "^5.0.4"
black = "^23.3.0"
pydocstyle = "^6.1.1"
mypy = "^1.4"
types-requests = "^2.25.8"
isort = {extras = ["colors"], version = "^5.10.1"}
pre-commit = "^2.17.0"
autoflake = "^1.4"

[tool.black]
include = "tap_spotify"
extend-exclude = "tests"
color = "true"

[tool.isort]
profile = "black"
multi_line_output = 3 # Vertical Hanging Indent
src_paths = "tap_spotify"
extend_skip = "tests"
color_output = "true"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-spotify = 'tap_spotify.tap:TapSpotify.cli'
